Bug #30244: row_count/found_rows does not replicate well

The functions ROW_COUNT/FOUND_ROWS are indeed not safe to be used in 
 statement based replication.
 Added code to declare them as such and switch the statement they're in
 to row based logging for mixed mode.


sql/item_create.cc:
  Bug #30244: row_count/found_rows does not replicate well
   - add the functions to the set of "unsafe functions" 
     for statement based replication
mysql-test/suite/rpl/r/rpl_row_unsafe_funcs.result:
  BitKeeper file /home/kgeorge/mysql/work/B30244-5.1-opt/mysql-test/suite/rpl/r/rpl_row_unsafe_funcs.result
mysql-test/suite/rpl/t/rpl_row_unsafe_funcs.test:
  BitKeeper file /home/kgeorge/mysql/work/B30244-5.1-opt/mysql-test/suite/rpl/t/rpl_row_unsafe_funcs.test